# modern-physical-ai-engineer-companion

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
capstone/: __init__.py  pipeline.py  run.py
chapters/ch16-imitation/: README.md  reproduce.py
chapters/ch20-rl/: README.md  reproduce.py
chapters/ch36-vla-finetune/: README.md  reproduce.py
docs/: SETUP.md
physicalai/: __init__.py
physicalai/envs/: __init__.py  gridworld.py  tabletop.py
physicalai/eval/: __init__.py  harness.py
physicalai/policies/: __init__.py  base.py  learned.py  vlm.py
physicalai/rl/: __init__.py  tabular.py
tests/: test_builds.py  test_capstone.py  test_core.py
tools/: demo.py
